--- a/au.org.libraryforall.launcher.app/src/main/res/layout/launcher_main.xml
+++ b/au.org.libraryforall.launcher.app/src/main/res/layout/launcher_main.xml
@@ -1,148 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
-  <ImageView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_centerInParent="true"
-    android:alpha=".1"
-    android:focusable="false"
-    android:scaleX="1.5"
-    android:scaleY="2.5"
-    android:src="@drawable/books" />
-
-  <RelativeLayout
-    android:id="@+id/spacerTop"
+  <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/launcherSpaceTop"
+    android:layout_width="0dp"
+    android:layout_height="64dp"
     android:background="@color/mainColor"
-    android:layout_width="match_parent"
-    android:layout_height="80dp">
-    <View
-      android:background="@color/mainColorLighter"
-      android:layout_alignParentBottom="true"
-      android:layout_width="match_parent"
-      android:layout_height="8dp"/>
-  </RelativeLayout>
-
-  <RelativeLayout
-    android:id="@+id/spacerBottom"
-    android:background="@color/mainColor"
-    android:layout_alignParentBottom="true"
-    android:layout_width="match_parent"
-    android:layout_height="80dp">
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
     <View
+      android:layout_width="0dp"
+      android:layout_height="8dp"
       android:background="@color/mainColorLighter"
-      android:layout_alignParentTop="true"
-      android:layout_width="match_parent"
-      android:layout_height="8dp"/>
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-      android:layout_width="wrap_content"
+      android:id="@+id/launcherTitle"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_margin="16dp"
-      android:layout_alignParentBottom="true"
-      android:textColor="@color/mainColorLighter"
-      android:text="LFA Launcher" />
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginEnd="16dp"
+      android:text="@string/launcherTitleLocked"
+      android:textColor="#ffffff"
+      android:textSize="18sp"
+      android:textStyle="bold"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+  </androidx.constraintlayout.widget.ConstraintLayout>
+
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/launcherListView"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_constraintBottom_toTopOf="@+id/launcherSpaceBottom"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/launcherSpaceTop" />
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/launcherSpaceBottom"
+    android:layout_width="0dp"
+    android:layout_height="64dp"
+    android:background="@color/mainColor"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent">
+
+    <View
+      android:id="@+id/view"
+      android:layout_width="0dp"
+      android:layout_height="8dp"
+      android:background="@color/mainColorLighter"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-      android:id="@+id/settings"
+      android:id="@+id/launcherSettings"
       android:layout_width="48dp"
       android:layout_height="48dp"
+      android:layout_marginTop="12dp"
+      android:layout_marginEnd="8dp"
       android:tint="@color/mainColorLighter"
-      android:layout_alignParentBottom="true"
-      android:layout_alignParentRight="true"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/settings" />
+
+    <TextView
+      android:id="@+id/launcherVersion"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
       android:layout_marginBottom="8dp"
-      android:layout_marginRight="8dp"
-      android:src="@drawable/settings"/>
+      android:text="LFA Launcher"
+      android:textSize="10sp"
+      android:fontFamily="monospace"
+      android:textColor="@color/mainColorLight"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent" />
+  </androidx.constraintlayout.widget.ConstraintLayout>
 
-  </RelativeLayout>
-
-  <RelativeLayout
-    android:id="@+id/mainArea"
-    android:layout_below="@id/spacerTop"
-    android:layout_above="@id/spacerBottom"
-    android:layout_margin="16dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <RelativeLayout
-      android:id="@+id/lfaLayout"
-      android:layout_centerHorizontal="true"
-      android:layout_centerVertical="true"
-      android:translationX="-64dp"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content">
-
-      <View
-        android:id="@+id/lfaShadow"
-        android:layout_width="68dp"
-        android:layout_height="92dp"
-        android:background="#000000"
-        android:translationY="4dp"
-        android:translationX="4dp"
-        android:alpha=".3"/>
-
-      <ImageView
-        android:id="@+id/lfaButton"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:src="@drawable/lfa" />
-
-      <TextView
-        android:id="@+id/lfaText"
-        android:layout_width="64dp"
-        android:layout_height="24dp"
-        android:layout_below="@id/lfaButton"
-        android:layout_alignLeft="@id/lfaButton"
-        android:background="@color/mainColor"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="#ffffff"
-        android:text="LFA"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-      android:id="@+id/lfaOfflineLayout"
-      android:layout_centerHorizontal="true"
-      android:layout_centerVertical="true"
-      android:translationX="0dp"
-      android:layout_toRightOf="@id/lfaLayout"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content">
-
-      <View
-        android:id="@+id/lfaOfflineShadow"
-        android:layout_width="68dp"
-        android:layout_height="92dp"
-        android:background="#000000"
-        android:translationY="4dp"
-        android:translationX="4dp"
-        android:alpha=".3"/>
-
-      <ImageView
-        android:id="@+id/lfaOfflineButton"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:src="@drawable/lfa" />
-
-      <TextView
-        android:id="@+id/lfaOfflineText"
-        android:layout_width="64dp"
-        android:layout_height="24dp"
-        android:layout_below="@id/lfaOfflineButton"
-        android:layout_alignLeft="@id/lfaOfflineButton"
-        android:background="@color/mainColor"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="#ffffff"
-        android:text="Offline"/>
-    </RelativeLayout>
-
-  </RelativeLayout>
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
