--- a/au.org.libraryforall.launcher.app/src/main/res/layout/launcher_item.xml
+++ b/au.org.libraryforall.launcher.app/src/main/res/layout/launcher_item.xml
@@ -23,8 +23,10 @@
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     android:text="Placeholder"
-    android:textSize="24sp"
+    android:textSize="18sp"
     android:textStyle="bold"
+    android:maxLines="1"
+    android:ellipsize="end"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@+id/launcherAppIcon"
     app:layout_constraintTop_toTopOf="@+id/launcherAppIcon" />
