--- a/au.org.libraryforall.launcher.main/src/main/res/layout/launcher_item.xml
+++ b/au.org.libraryforall.launcher.main/src/main/res/layout/launcher_item.xml
@@ -3,7 +3,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="112dp">
+  android:layout_height="112dp"
+  android:background="?android:attr/selectableItemBackground">
 
   <ImageView
     android:id="@+id/launcherAppIcon"
